--- a/src/main/resources/fxml/user/LoginView.fxml
+++ b/src/main/resources/fxml/user/LoginView.fxml
@@ -1,31 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" spacing="10.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.org.ddd.ui.user.LoginController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
-    
-    <Label text="Login" />
-    
-    <VBox spacing="5.0">
-        <Label text="Email:" />
-        <TextField fx:id="emailField" />
-    </VBox>
-    
-    <VBox spacing="5.0">
-        <Label text="Password:" />
-        <PasswordField fx:id="passwordField" />
-    </VBox>
-    
-    <Button onAction="#handleLogin" text="Login" />
-    <Button onAction="#handleGoToRegister" text="Register New Account" />
-    
-    <Label fx:id="errorLabel" />
-</VBox>
+<BorderPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="com.org.ddd.ui.user.LoginController"
+            prefHeight="400.0" prefWidth="600.0"
+            stylesheets="@../../css/login.css">
+    <center>
+        <VBox styleClass="vbox">
+            <children>
+                <Label id="titleLabel" text="Login" />
+                <TextField fx:id="emailField" promptText="Enter your email"/>
+                <PasswordField fx:id="passwordField" promptText="Enter your password"/>
+                <Label fx:id="errorMessageLabel" text="" />
+                <HBox alignment="CENTER" spacing="100.0">
+                    <Button fx:id="loginButton" onAction="#handleLogin" text="Login" />
+                    <Button fx:id="registerButton" onAction="#handleRegister" text="Go to Register" />
+                </HBox>
+            </children>
+        </VBox>
+    </center>
+</BorderPane>
