--- a/src/main/resources/fxml/user/MessagesView.fxml
+++ b/src/main/resources/fxml/user/MessagesView.fxml
@@ -1,41 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.geometry.Insets?>
 
-<BorderPane xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.org.ddd.ui.user.MessagesController">
-
+<BorderPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="com.org.ddd.ui.user.MessagesController"
+            prefHeight="400.0" prefWidth="600.0"
+            stylesheets="@../../css/messages.css">
     <left>
-        <VBox spacing="5.0" style="-fx-border-color: #cccccc; -fx-border-width: 0 1 0 0;">
+        <VBox spacing="5" prefWidth="150.0">
             <padding>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                <Insets top="10" right="10" bottom="10" left="10"/>
             </padding>
-            <Label style="-fx-font-weight: bold;" text="Users" />
-            <ListView fx:id="usersListView" prefWidth="200.0" VBox.vgrow="ALWAYS" />
+            <Label text="Friends"/>
+            <ListView fx:id="friendsListView" VBox.vgrow="ALWAYS"/>
         </VBox>
     </left>
-
     <center>
-        <VBox spacing="10.0">
-            <padding>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-            </padding>
-
-            <Label fx:id="chatPartnerLabel" style="-fx-font-size: 14px; -fx-font-weight: bold;" text="Select a user to start chatting" />
-
-            <ListView fx:id="messagesListView" style="-fx-background-color: transparent;" VBox.vgrow="ALWAYS" />
-
-            <HBox spacing="10.0">
-                <TextArea fx:id="messageInputArea" prefHeight="50.0" promptText="Type a message..." wrapText="true" HBox.hgrow="ALWAYS" />
-                <Button fx:id="sendButton" disable="true" mnemonicParsing="false" onAction="#handleSendMessage" prefHeight="40.0" prefWidth="100.0" text="Send" />
+        <VBox>
+            <ListView fx:id="messagesListView" VBox.vgrow="ALWAYS"/>
+            <VBox fx:id="replyContainer" managed="false" visible="false">
+                <padding>
+                    <Insets top="5" right="5" bottom="5" left="5"/>
+                </padding>
+                <HBox alignment="CENTER_LEFT" spacing="5">
+                    <Label text="Replying to:"/>
+                    <Label fx:id="replyToLabel"/>
+                    <Region HBox.hgrow="ALWAYS"/>
+                    <Button text="X" onAction="#handleCancelReply"/>
+                </HBox>
+            </VBox>
+            <HBox alignment="BOTTOM_CENTER">
+                <TextField fx:id="messageTextField" HBox.hgrow="ALWAYS"/>
+                <Button onAction="#handleSendMessage" text="Send"/>
             </HBox>
         </VBox>
     </center>
-    
 </BorderPane>
